[gd_scene format=3 uid="uid://bbuyvin7s2ebh"]

[ext_resource type="Script" uid="uid://d00e1vrbdqrok" path="res://scripts/core/phase_truck_planning.gd" id="1_adry6"]

[node name="TruckPlanningPhase" type="Control" unique_id=41730657]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_adry6")

[node name="PhaseLabel" type="Label" parent="." unique_id=513244784]
layout_mode = 0
offset_left = 8.0
offset_top = 9.0
offset_right = 48.0
offset_bottom = 32.0

[node name="InventoryLabel" type="Label" parent="." unique_id=115620512]
layout_mode = 0
offset_left = 38.0
offset_top = 344.0
offset_right = 78.0
offset_bottom = 367.0

[node name="ContinueButton" type="Button" parent="." unique_id=1941658173]
layout_mode = 0
offset_left = 12.0
offset_top = 74.0
offset_right = 20.0
offset_bottom = 82.0

[node name="Menu" type="VBoxContainer" parent="." unique_id=1250710805]
layout_mode = 0
offset_left = 400.0
offset_top = 232.0
offset_right = 440.0
offset_bottom = 272.0
